<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_label">Sunset</string>
    <string name="cloud_label">Cloud</string>
    <string name="temp_label">C</string>
    <string name="temp_min_max_delimiter">-</string>
    <string name="temp_range_label">Temperature</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_label">Wind</string>
    <string name="snow_label">Snow</string>
    <string name="feelslikec_label">Feels like</string>
    <string name="city_label">City</string>
    <string name="extended_settings_label">Settings showing</string>
    <string name="show_temp_label">Temperature</string>
    <string name="add_city_label">Add city</string>
    <string name="show_temp_range">Temperature range</string>
    <string name="wind_deg_label">Wind direction</string>
    <string name="save_label">Apply</string>
    <string name="cityname_label">City</string>
    <string name="list_fragment_tag" translatable="false">listFragment</string>
    <string name="weather_fragment_tag" translatable="false">weatherTag</string>
    <string name="refresh_label">Refresh</string>
    <string name="settings_label">Settings</string>
    <string name="feedback_label">Feedback</string>
    <string name="about_label">About</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search_location_hint">Input location</string>
    <string name="region_label">Region:</string>
    <string name="country_label">Country:</string>
    <string name="selectbylocation">Search by GPS</string>
    <string name="press_button">Or press button</string>
    <string name="to_search_near_locations_by_gps">to search by GPS</string>
    <string name="weathericon">WeatherIcon</string>
    <string name="sunseticon">SunsetIcon</string>
    <string name="degreeLabel">o</string>
    <string name="sunriseicon">SunriseIcon</string>
    <string name="temp_from_label">from</string>
    <string name="temp_to_label">to</string>
    <string name="percent" translatable="false">%</string>
    <string name="Sun">Солнце</string>
    <string name="delimeter" translatable="false">-</string>
    <string name="sun_hour">Sun hour</string>
    <string name="uv_index">Uv index</string>
    <string name="moon">Луна</string>
    <string name="illm">Illm</string>
    <string name="detailday" translatable="false">DetailDay</string>
    <string name="temp_c">Temp,C</string>
    <string name="feels_c">Feels,C</string>
    <string name="wind_m_s">Wind,m/s</string>
    <string name="humidity">Humidity,%</string>
    <string name="precip_mm">Precip,mm</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com" translatable="false">android.studio@android.com</string>
    <string name="profileimage" translatable="false">ProfileImage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_label">Apply</string>
    <string name="parametr_label">Parametr</string>
    <string name="year_label">Year</string>
    <string name="hours_label">Hours</string>
    <string name="month_label">Month</string>
    <string-array name="parametrs_array">
        <item>Temperature, C</item>
        <item>Wind, m/s</item>
        <item>Hymidity</item>
        <item>Temperature water, C</item>
    </string-array>

</resources>
