<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/etLocationTemplateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search_location_hint"
        app:layout_constraintEnd_toEndOf="@+id/etLocationTemplate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLocationTemplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:freezesText="true"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocationTemplateLabel" />

    <TextView
        android:id="@+id/tvPressButtonLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/press_button"
        app:layout_constraintBottom_toBottomOf="@+id/btnLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLocation" />

    <ImageButton
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/selectbylocation"
        app:layout_constraintStart_toEndOf="@+id/tvPressButtonLocationLabel"
        app:layout_constraintTop_toBottomOf="@+id/etLocationTemplate"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/tvLocationButtonDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/to_search_near_locations_by_gps"
        app:layout_constraintBottom_toBottomOf="@+id/btnLocation"
        app:layout_constraintStart_toEndOf="@+id/btnLocation"
        app:layout_constraintTop_toTopOf="@+id/btnLocation" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAutoCompleteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvAutoCompleteList"
        app:layout_constraintEnd_toEndOf="@+id/rvAutoCompleteList"
        app:layout_constraintStart_toStartOf="@+id/rvAutoCompleteList"
        app:layout_constraintTop_toTopOf="@+id/rvAutoCompleteList" />

</android.support.constraint.ConstraintLayout>