<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tyumen" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCityName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/tvTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName"
            tools:text="11.12.2018" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName"
            tools:text="23:00" />

        <TextView
            android:id="@+id/tvCloudDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            tools:text="Ясно" />

        <ImageView
            android:id="@+id/ivWeatherIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/weathericon"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/tvTemp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLikeCLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTemp"
            app:srcCompat="@color/colorCard" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintEnd_toStartOf="@+id/tvDegreeLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivWeatherIcon"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudDescription"
            tools:text="25" />

        <TextView
            android:id="@+id/tvDegreeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degreeLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvDegreeCelsus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvTemp"
            app:layout_constraintTop_toTopOf="@+id/tvTemp" />

        <TextView
            android:id="@+id/tvDegreeCelsus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:text="@string/temp_label"
            app:layout_constraintEnd_toStartOf="@+id/tvCloudLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvDegreeLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDegreeLabel" />

        <TextView
            android:id="@+id/tvCloudLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/cloud_label"
            app:layout_constraintEnd_toStartOf="@+id/tvCloudPercent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvDegreeCelsus"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudDescription" />

        <TextView
            android:id="@+id/tvCloudPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCloudLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCloudLabel"
            tools:text="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCloudPercent"
            app:layout_constraintTop_toTopOf="@+id/tvCloudLabel" />

        <TextView
            android:id="@+id/tvFeelsLikeCLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feelslikec_label"
            app:layout_constraintStart_toStartOf="@+id/ivWeatherIcon"
            app:layout_constraintTop_toTopOf="@+id/tvWindLabel" />

        <TextView
            android:id="@+id/tvFeelsLikesDegreeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/degreeLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info"
            app:layout_constraintEnd_toStartOf="@+id/tvFeelsLikesCelsusLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLikeC"
            app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />

        <TextView
            android:id="@+id/tvFeelsLikesCelsusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_label"
            app:layout_constraintEnd_toEndOf="@+id/tvDegreeCelsus"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLikesDegreeLabel"
            app:layout_constraintTop_toTopOf="@+id/tvWindLabel" />

        <TextView
            android:id="@+id/tvFeelsLikeC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvFeelsLikesDegreeLabel"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLikeCLabel"
            app:layout_constraintTop_toTopOf="@+id/tvWindLabel"
            tools:text="20" />

        <TextView
            android:id="@+id/tvHumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/humidity_label"
            app:layout_constraintStart_toStartOf="@+id/tvCloudLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudLabel" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvHumidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudLabel"
            tools:text="0" />

        <TextView
            android:id="@+id/tvPressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure_label"
            app:layout_constraintStart_toStartOf="@+id/tvHumidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidityLabel" />

        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvPressureLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidityLabel"
            tools:text="760" />

        <TextView
            android:id="@+id/tvWindLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wind_label"
            app:layout_constraintStart_toStartOf="@+id/tvCloudLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvWindLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel"
            tools:text="5" />

        <TextView
            android:id="@+id/tvWindDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvWind"
            app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel"
            tools:text="90" />

        <ProgressBar
            android:id="@+id/progressBarHistory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/percent"
            app:layout_constraintStart_toEndOf="@+id/tvHumidity"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudLabel" />

        <ImageButton
            android:id="@+id/ibShowHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvWeatherList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical" />

</LinearLayout>